--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.3",
     "cookies-next": "^4.1.1",
     "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
