--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.19",
     "@heroicons/react": "^2.1.3",
+    "@vercel/postgres": "^0.8.0",
     "cookies-next": "^4.1.1",
     "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
@@ -21,7 +22,8 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
     "remark": "^15.0.1",
-    "remark-react": "^9.0.1"
+    "remark-react": "^9.0.1",
+    "vercel": "^34.1.1"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.12",
