--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
+    "react-markdown": "^9.0.1",
     "remark": "^15.0.1",
     "remark-react": "^9.0.1",
     "vercel": "^34.1.1"
