--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "@headlessui/react": "^1.7.19",
     "@heroicons/react": "^2.1.3",
     "@vercel/postgres": "^0.8.0",
-    "cookies-next": "^4.1.1",
+    "cookies-next": "^4.2.1",
     "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
     "markdown-to-jsx": "^7.4.5",
     "next": "^14.1.4",
+    "next-share": "^0.27.0",
     "path": "^0.12.7",
     "react": "^18",
     "react-dom": "^18",
