--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@headlessui/react": "^1.7.19",
     "@heroicons/react": "^2.1.3",
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "@vercel/postgres": "^0.8.0",
     "cookies-next": "^4.2.1",
+    "date-fns": "^3.6.0",
     "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
     "markdown-to-jsx": "^7.4.5",
