--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
     "react-markdown": "^9.0.1",
+    "react-social-icons": "^6.16.0",
     "remark": "^15.0.1",
     "remark-react": "^9.0.1",
     "vercel": "^34.1.1"
