--- a/login page/auth/package.json
+++ b/login page/auth/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
+    "@radix-ui/react-toast": "^1.2.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.438.0",
@@ -16,8 +18,10 @@
     "node-appwrite": "^14.0.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.0",
     "tailwind-merge": "^2.5.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -27,5 +31,7 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
-  "include": ["src"]
+  "include": [
+    "src"
+  ]
 }
