Add login page, admin page, and fixed some UI

--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "next": "^14.1.4",
     "next-share": "^0.27.0",
     "path": "^0.12.7",
+    "ra-data-json-server": "^5.2.0",
     "react": "^18",
+    "react-admin": "^5.2.0",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
     "react-markdown": "^9.0.1",
