--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.19",
     "@heroicons/react": "^2.1.3",
+    "@react-email/components": "0.0.25",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@vercel/postgres": "^0.8.0",
     "cookies-next": "^4.2.1",
@@ -25,11 +26,13 @@
     "react": "^18",
     "react-admin": "^5.2.0",
     "react-dom": "^18",
+    "react-email": "^3.0.1",
     "react-hook-form": "^7.51.3",
     "react-markdown": "^9.0.1",
     "react-social-icons": "^6.16.0",
     "remark": "^15.0.1",
     "remark-react": "^9.0.1",
+    "resend": "^4.0.0",
     "vercel": "^34.1.1"
   },
   "devDependencies": {
