--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "email": "email dev"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.19",
@@ -26,7 +27,6 @@
     "react": "^18",
     "react-admin": "^5.2.0",
     "react-dom": "^18",
-    "react-email": "^3.0.1",
     "react-hook-form": "^7.51.3",
     "react-markdown": "^9.0.1",
     "react-social-icons": "^6.16.0",
@@ -42,6 +42,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
+    "react-email": "^3.0.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   },
