--- a/package.json
+++ b/package.json
@@ -14,15 +14,20 @@
     "@heroicons/react": "^2.1.3",
     "@react-email/components": "0.0.25",
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@types/next": "^9.0.0",
     "@vercel/postgres": "^0.8.0",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "cookies-next": "^4.2.1",
     "date-fns": "^3.6.0",
     "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
     "markdown-to-jsx": "^7.4.5",
     "next": "^14.1.4",
+    "next-auth": "^4.24.8",
     "next-share": "^0.27.0",
     "path": "^0.12.7",
+    "pg": "^8.13.0",
     "ra-data-json-server": "^5.2.0",
     "react": "^18",
     "react-admin": "^5.2.0",
@@ -37,6 +42,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.12",
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
