--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bcryptjs": "^2.4.3",
     "cookies-next": "^4.2.1",
     "date-fns": "^3.6.0",
+    "drizzle-orm": "^0.34.1",
     "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
     "markdown-to-jsx": "^7.4.5",
@@ -44,9 +45,11 @@
     "@tailwindcss/typography": "^0.5.12",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
+    "@types/pg": "^8.11.10",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "drizzle-kit": "^0.25.0",
     "postcss": "^8",
     "react-email": "^3.0.1",
     "tailwindcss": "^3.3.0",
