--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cookies-next": "^4.2.1",
     "date-fns": "^3.6.0",
     "drizzle-orm": "^0.34.1",
+    "framer-motion": "^11.11.9",
     "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
     "markdown-to-jsx": "^7.4.5",
