--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-admin": "^5.2.0",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
+    "react-intersection-observer": "^9.13.1",
     "react-markdown": "^9.0.1",
     "react-social-icons": "^6.16.0",
     "remark": "^15.0.1",
