--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "fs": "^0.0.1-security",
     "gray-matter": "^4.0.3",
     "ioredis": "^5.4.1",
+    "lenis": "^1.1.14",
     "markdown-to-jsx": "^7.4.5",
     "next": "^14.1.4",
     "next-auth": "^4.24.8",
