--- a/package.json
+++ b/package.json
@@ -12,42 +12,46 @@
   "dependencies": {
     "@heroicons/react": "^2.1.3",
     "@tailwindcss/aspect-ratio": "^0.4.2",
-    "@types/next": "^9.0.0",
+    "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
-    "bullmq": "^5.21.1",
-    "cookies-next": "^4.2.1",
-    "date-fns": "^3.6.0",
-    "drizzle-orm": "^0.34.1",
-    "framer-motion": "^11.16.0",
+    "cookies-next": "^5.1.0",
+    "date-fns": "^4.1.0",
+    "drizzle-orm": "^0.38.4",
+    "framer-motion": "^11.18.0",
     "ioredis": "^5.4.1",
-    "lenis": "^1.1.14",
     "next": "^15.1.3",
     "next-auth": "^4.24.8",
     "next-share": "^0.27.0",
     "path": "^0.12.7",
     "pg": "^8.13.0",
-    "ra-data-json-server": "^5.2.0",
-    "react": "^18.3.1",
-    "react-admin": "^5.2.0",
+    "ra-data-json-server": "^5.4.4",
+    "react": "^19.0.0",
+    "react-admin": "^5.4.4",
     "react-hook-form": "^7.51.3",
     "react-social-icons": "^6.16.0",
     "redis": "^4.7.0",
     "remark": "^15.0.1",
-    "resend": "^4.0.0"
+    "resend": "^4.1.1"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.12",
-    "@types/bcrypt": "^5.0.2",
-    "@types/node": "^22.10.5",
+    "@tailwindcss/typography": "^0.5.16",
+    "@types/node": "^22.10.7",
     "@types/pg": "^8.11.10",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^19.0.7",
+    "@types/react-dom": "^19.0.3",
     "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.0.1",
-    "drizzle-kit": "^0.25.0",
-    "postcss": "^8",
+    "drizzle-kit": "^0.30.2",
+    "postcss": "^8.5.1",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5.6.3"
+    "typescript": "^5.7.3"
+  },
+  "overrides": {
+    "inflight": "npm:lru-cache",
+    "rimraf": "^4.0.0",
+    "glob": "^9.0.0",
+    "are-we-there-yet": "^3.0.0",
+    "gauge": "^4.0.0"
   },
   "description": "",
   "main": "postcss.config.js",
